# movinets_helper

./: .gitignore  .readthedocs.yaml  404.html  CHANGELOG.rst  LICENSE  Makefile  README.md  docs_requirements.txt  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
api/modeling/: index.html
api/reader/: index.html
api/utils/: index.html
api/writer/: index.html
docs/: Makefile  conf.py  how-to-guides.md  index.md  index.rst  installation.md  installation.rst  make.bat  usage.rst
docs/api/: modeling.md  modelling.md  reader.md  utils.md  writer.md
how-to-guides/: index.html
installation/: index.html
movinets_helper/: __init__.py  modeling.py  modelling.py  reader.py  utils.py  writer.py
search/: search_index.json
tests/: __init__.py
