[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "movinets_helper"
author = "Agustín Piqueres"
author-email = "agustin.piqueres@gmail.com"
home-page = "https://github.com/plaguss/movinets_helper"
requires-python=">=3.8"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8"
]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = [
    "pytest==6.2.3",
    "pytest-cov==2.11.1"
]
dev = [
    "isort",
    "black",
    "mypy",
    "nox"
]

[tool.flit.metadata.urls]
Documentation = "https://movinets_helper.readthedocs.io"
Repository = "https://github.com/plaguss/movinets_helper"
