[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "movinets_helper"
author = "Agustín Piqueres"
author-email = "agustin.piqueres@gmail.com"
home-page = "https://github.com/plaguss/movinets_helper"
requires = [
    "tensorflow",
    "tensorflow-io>=0.26.0",
    "tf-models-official",
    "tensorflow-hub",
    "tqdm>=4.62.3",
    "pandas>=1.3.5",
    "opencv-python>=4.5.5.62",
    "opencv-python-headless>=4.6.0.66",
]
requires-python=">=3.7"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = [
    "pytest==6.2.3",
    "pytest-cov==2.11.1"
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]
dev = [
    "isort",
    "black",
    "mypy",
    "nox",
    "flake8"
]

[tool.flit.metadata.urls]
Documentation = "https://movinets_helper.readthedocs.io"
Repository = "https://github.com/plaguss/movinets_helper"
